saperated changes because something not working

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 
 
 mongoURI = mongodb+srv://chaitanya:girase123@cluster0.dypcc.mongodb.net/ecomBackend?retryWrites=true&w=majority
+
+SECRET_KEY = "chaitanya_prabhu"
